--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongoose": "^8.17.0",
+    "next": "15.4.5",
+    "next-nprogress-bar": "^2.4.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.5"
+    "react-hook-form": "^7.62.0",
+    "react-toastify": "^11.0.5",
+    "shortid": "^2.2.17"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
