--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mongoose": "^8.17.0",
     "next": "15.4.5",
     "next-nprogress-bar": "^2.4.7",
+    "nodemailer": "^7.0.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
