feat: integrate Stream Chat for messaging functionality in buyer and seller panels
- Added `cookies-next` for cookie management.
- Implemented Stream Chat integration in both Buyer and Seller panels.
- Created API endpoint to generate user tokens for Stream Chat.
- Updated RoomSchema to remove unnecessary fields.
- Enhanced the layout and structure of Buyer and Seller panels for better UX.
- Removed redundant logout logic from the logout API.
- Added console logging for debugging purposes in createRoom API.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cookies-next": "^6.1.0",
     "mongoose": "^8.17.0",
     "next": "15.4.5",
     "next-nprogress-bar": "^2.4.7",
@@ -17,7 +18,9 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-toastify": "^11.0.5",
-    "shortid": "^2.2.17"
+    "shortid": "^2.2.17",
+    "stream-chat": "^9.16.0",
+    "stream-chat-react": "^13.3.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
