--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-slot": "^1.2.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cookies-next": "^6.1.0",
+    "lucide-react": "^0.540.0",
     "mongoose": "^8.17.0",
     "next": "15.4.5",
-    "next-nprogress-bar": "^2.4.7",
+    "next-themes": "^0.4.6",
+    "nextjs-toploader": "^3.8.16",
     "nodemailer": "^7.0.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -20,10 +26,12 @@
     "react-toastify": "^11.0.5",
     "shortid": "^2.2.17",
     "stream-chat": "^9.16.0",
-    "stream-chat-react": "^13.3.0"
+    "stream-chat-react": "^13.3.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.7"
   }
 }
